# StructuraSystems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: c-cpp.yml
resources/: sysml.qrc
strukturasystemsserver/: CMakeLists.txt
strukturasystemsserver/src/: main.cpp
strukturasystemsserver/src/Controller/: AuthenticationController.hpp  BaseController.hpp  CommitController.hpp  DataBaseController.cpp  DataBaseController.h  ElementsController.hpp  ProjectController.hpp
strukturasystemsserver/src/Json/: FromJsonFactory.hpp  Jsonable.hpp  Updatable.hpp
strukturasystemsserver/src/Json/entities/: AuthenticationRequest.cpp  AuthenticationRequest.h  AuthenticationResponse.cpp  AuthenticationResponse.h  Project.cpp  Project.h
strukturasystemsserver/src/Services/: AuthenticationService.cpp  AuthenticationService.h  ElementNavigationService.cpp  ElementNavigationService.h  ProjectService.cpp  ProjectService.h  ProjectVersioningService.cpp  ProjectVersioningService.h  ServerProjectService.cpp  ServerProjectService.h
strukturasystemsserver/src/Templates/: CrudApi.hpp  IdMap.hpp  SessionAPI.hpp
stucturasystems/: CMakeLists.txt
stucturasystems/resources/: Resources.qrc
stucturasystems/src/: main.cpp
stucturasystems/src/Models/: CodeWidgetModel.cpp  CodeWidgetModel.h  MainWindowModel.cpp  MainWindowModel.h  SettingsModel.cpp  SettingsModel.h
stucturasystems/src/Models/Delegates/: HtmlDelegate.cpp  HtmlDelegate.h
stucturasystems/src/Models/ItemModels/: ErrorItem.cpp  ErrorItem.h  ErrorItemModel.cpp  ErrorItemModel.h  ProjectItemModel.cpp  ProjectItemModel.h  ProjectTreeViewItem.cpp  ProjectTreeViewItem.h
stucturasystems/src/Models/Parser/: StructuraSystemsParser.cpp  StructuraSystemsParser.h
stucturasystems/src/Models/Parser/Markdown/: MarkdownParser.cpp  MarkdownParser.h
stucturasystems/src/Models/Parser/Markdown/CommonmarkParser/: cmark.c  cmark.h  main.c  node.h
stucturasystems/src/Models/Parser/Markdown/Elements/: BoldMarkdown.cpp  BoldMarkdown.h  CodeMarkdown.cpp  CodeMarkdown.h  HeadersMarkdown.cpp  HeadersMarkdown.h  IMarkdownElement.h  ImagesMarkdown.cpp  ImagesMarkdown.h  ItalicMarkdown.cpp  ItalicMarkdown.h  LinksMarkdown.cpp  LinksMarkdown.h  ParagraphMarkdown.cpp  ParagraphMarkdown.h  QuoteMarkdown.cpp  QuoteMarkdown.h  TocMarkdown.cpp  TocMarkdown.h  YaMlMarkdown.cpp  YaMlMarkdown.h
stucturasystems/src/Services/: BECommunicationService.cpp  BECommunicationService.h
stucturasystems/src/Services/entities/: DigitalTwin.cpp  DigitalTwin.h
stucturasystems/src/Widgets/: CodeWidget.cpp  CodeWidget.h  StructuraMainWindow.cpp  StructuraMainWindow.h
stucturasystems/src/Widgets/Dialogs/: DigitalTwinCreationWizzard.cpp  DigitalTwinCreationWizzard.h  EditProjectDialog.cpp  EditProjectDialog.h  SettingsDialog.cpp  SettingsDialog.h
stucturasystems/src/Widgets/ListWidgets/: AddElementWidget.cpp  AddElementWidget.h  MarkdownElement.cpp  MarkdownElement.h
stucturasystems/ui/: AddElementWidget.ui  CodeWidget.ui  DigitalTwinCreationWizzard.ui  EditProjectDialog.ui  MainWindow.ui  MarkdownElement.ui  SettingsDialog.ui
